--- a/views/About.ejs
+++ b/views/About.ejs
@@ -18,6 +18,8 @@
             <p>
                 PRISA extends on the capabilities of PRIS by creating profiles for the data so the POI may be identified in different circumstances and body positions. A person is needed to let PRISA know that different data should be in the same profile of an individual POI. Once this is done PRIS can more accurately identify the POI moving forward. As of 2019, <strong>PRIS is currently the most accurate system </strong> for finding POIs across different media platforms.
             </p>
+            <p>This software uses libraries from the FFmpeg project under the LGPLv2.1</p>
+            <p></p>
         </div>
         <%include Footer.ejs %>
     </body>
