--- a/views/Footer.ejs
+++ b/views/Footer.ejs
@@ -1,6 +1,6 @@
 <footer class="page-footer font-small indigo">
     <div class="footer-copyright text-center py-3">
-        PRISA Version 1.0, &copy 2019 MSU
+        PRISA Version 1.0, &copy 2019 PRISA Team.    <a href="License">Terms and Conditions</a>
     </div>
 </footer>
 
