--- a/views/Query.ejs
+++ b/views/Query.ejs
@@ -29,7 +29,7 @@
                         <!-- Display Uploaded Image Section -->
                         <div class="results_original_image" id="results_original_image">
                             <div class="uploaded_text">
-                                    <p id="upload_text" class="hidden text-center">Uploaded Image</p>
+                                    <p id="upload_text" class="hidden text-center">Uploaded Image</p><br>
                             </div>
                             <div class="imgHolder" id="imageUploaded"></div>
                         </div>
@@ -41,7 +41,8 @@
                                 <p class="text-center" id="psimilar_0"></p>
                             </div>
                             <div class="same_person_checkbox">
-                                <label>Same Person: </label><input class="hidden" id="similar_0" name="similar_0" type="checkbox" />
+                                <pre>Same Person: <input class="hidden" id="similar_0" name="similar_0" type="checkbox" />
+                                </pre>
                             </div>
                             <div class="image_comparison">
                                 <div class="imgHolder" id="imageHolder0"></div>
@@ -53,7 +54,8 @@
                                 <p class="text-center" id="psimilar_1"></p>
                             </div>
                             <div class="same_person_checkbox">
-                                <label>Same Person: </label><input class="hidden" id="similar_1" name="similar_1" type="checkbox" />
+                                <pre>Same Person: <input class="hidden" id="similar_1" name="similar_1" type="checkbox" />
+                                </pre>
                             </div>
                             <div class="image_comparison">
                                 <div class="imgHolder" id="imageHolder1"></div>
@@ -65,7 +67,8 @@
                                 <p class="text-center" id="psimilar_2"></p>
                             </div>
                             <div class="same_person_checkbox">
-                                <label>Same Person: </label><input class="hidden" id="similar_2" name="similar_2" type="checkbox" />
+                                <pre>Same Person: <input class="hidden" id="similar_2" name="similar_2" type="checkbox" />
+                                </pre>
                             </div>
                             <div class="image_comparison">
                                 <div class="imgHolder" id="imageHolder2"></div>
