--- a/views/Query.ejs
+++ b/views/Query.ejs
@@ -9,7 +9,7 @@
 
         <div class="container">
                 <form action="submit-query" id="form-submit" method="post" enctype="multipart/form-data">
-                    <!--New Upload Bar-->
+                    <!-- Upload Bar -->
                     <div class="input-group">
                         <div class="input-group-prepend">
                             <input type="submit" class="input-group-text submit" value="Upload"/>
