--- a/views/Query.ejs
+++ b/views/Query.ejs
@@ -31,7 +31,8 @@
                             <div class="uploaded_text">
                                     <p id="upload_text" class="hidden text-center">Uploaded Image</p><br>
                             </div>
-                            <div class="imgHolder" id="imageUploaded"></div>
+                            <div class="image_original"><div class="imgHolder" id="imageUploaded"></div></div>
+                            
                         </div>
                         
                         <!-- Display Results for Comparison -->
