--- a/views/FAQ.ejs
+++ b/views/FAQ.ejs
@@ -16,8 +16,9 @@
                 <li>Can I use the PRIS or PRISA software?</li>
                 Currently by request, source is available by email at da96639@live.missouristate.edu
                 <li>How many image files can be loaded at once?</li>
-                
+                PRISA allows 150 .jpg files to be uploaded at once.
                 <li>How many video files can be loaded at once?</li>
+                PRISA allows 25 .avi files to be loaded at once.
                 <li>What is PRIS?</li>
                 PRIS is an identification software created at MSU. It was made to identify an individual and recognize that same individual later on in a different media. In this way it may be able to track a person of interest across any given media that is fed to it. 
                 <li>How does PRISA work?</li>
